add: chips component

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href="./Components/Card/Card.html">Cards</a>
       </li>
+      <li>
+        <a href="./Components/Chips/Chips.html">Chips</a>
+      </li>
     </ol>
   </body>
 </html>
