add: link to drawer page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <li>
         <a href="./Components/Chips/Chips.html">Chips</a>
       </li>
+      <li>
+        <a href="./Components/Drawer/Drawer.html">Drawer</a>
+      </li>
     </ol>
   </body>
 </html>
