add: header component

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       <li>
         <a href="./Components/Drawer/Drawer.html">Drawer</a>
       </li>
+      <li>
+        <a href="./Components/Header/Header.html">Header</a>
+      </li>
     </ol>
   </body>
 </html>
