add: badge component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       <li>
         <a href="./Components/Header/Header.html">Header</a>
       </li>
+      <li>
+        <a href="./Components/Badge/Badge.html">Badge</a>
+      </li>
     </ol>
   </body>
 </html>
