add: snackbar component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li>
         <a href="./Components/Badge/Badge.html">Badge</a>
       </li>
+      <li>
+        <a href="./Components/Snackbar/Snackbar.html">Snackbar</a>
+      </li>
     </ol>
   </body>
 </html>
