add: dialog component

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li>
         <a href="./Components/Snackbar/Snackbar.html">Snackbar</a>
       </li>
+      <li>
+        <a href="./Components/Dialog/Dialog.html">Dialog</a>
+      </li>
     </ol>
   </body>
 </html>
