style: hompage done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Components</h1>
-    <ol>
+    <ol class="index">
       <li>
         <a href="./Components/Card/Card.html">Cards</a>
       </li>
@@ -30,6 +30,9 @@
       </li>
       <li>
         <a href="./Components/Dialog/Dialog.html">Dialog</a>
+      </li>
+      <li>
+        <a href="./Components/Tab/Tab.html">Tabs</a>
       </li>
     </ol>
   </body>
